feat: add admin endpoint to fix non-streamable videos
